# paradox

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  PAPER_PREP.md  PYPI_RELEASE_GUIDE.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_READINESS_REPORT.md  RESEARCH.md  SECURITY.md  benchmark_results.csv  comparison_metrics.json  comparison_results.csv  generate_new_visualizations.py  paper_metrics.json  project.md  pyproject.toml  release_audit.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  tests.yml
docs/: api.md  architecture.md
paradox/: __init__.py
paradox/analysis/: image_analyzer.py
paradox/crypto/: aes.py  chacha.py  interface.py
paradox/entropy/: collector.py  extractor.py
paradox/hashchain/: engine.py
paradox/image_source/: local.py  random_fetch.py
paradox/kdf/: hkdf.py
paradox/metadata/: serializer.py
paradox/recursion/: layers.py
paradox/seed/: generator.py
paradox/visualize/: walk_visualizer.py
paradox/walk/: coordinate_engine.py  recursive_walk.py
paradox_benchmarks/: __init__.py  phase1_validation.py  phase2_collision.py  phase3_avalanche.py  phase4_entropy.py  phase5_randomness.py  phase6_security.py  phase7_performance.py  phase8_visualization.py  run_all.py  utils.py
paradox_benchmarks/reports/: validation_report.md
paradox_comparisons/: run_all.py
research/: build_cited_paper.py  paradox-ieee-cited.docx  paradox-ieee.doc  paradox_citation_mapping.txt  thecitations.txt
tests/: test_paradox.py
(+1 files in other folders)
