[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paradox-rvekde"
version = "1.0.2"
description = "Recursive Visual Entropy Key Derivation Engine (RVE-KDE)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Chirag Ferwani"}
]
keywords = ["cryptography", "entropy", "key-derivation", "image", "visual-entropy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Security :: Cryptography",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "cryptography>=41.0",
    "blake3>=0.3",
    "requests>=2.31",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["paradox*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
